objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Residential_prac_preferred_weeks__c</fullName>
        <inlineHelpText>Survey question: c) How many weeks would you have preferred to work?</inlineHelpText>
        <label>Residential prac preferred weeks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3 weeks</fullName>
                </value>
                <value>
                    <fullName>4 weeks</fullName>
                </value>
                <value>
                    <fullName>6 weeks</fullName>
                </value>
                <value>
                    <fullName>9 weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residential_prac_schedule_feedback__c</fullName>
        <inlineHelpText>Survey question: b) If &apos;yes&apos;, did your work schedule work for you?

Text (Qs B and C only visible if answer to previous = &apos;yes&apos;</inlineHelpText>
        <label>Residential prac schedule feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Residential_practitioner__c</fullName>
        <inlineHelpText>Survey question: a) Did you work as a residential practitioner?</inlineHelpText>
        <label>Residential practitioner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resources_to_deliver_curriculum__c</fullName>
        <label>Resources to deliver curriculum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsiveness_to_Feedback__c</fullName>
        <label>Responsiveness to Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always open to performance feedback</fullName>
                </value>
                <value>
                    <fullName>Usually open to performance feedback</fullName>
                </value>
                <value>
                    <fullName>Sometimes open to performance feedback</fullName>
                </value>
                <value>
                    <fullName>Rarely open to performance feedback</fullName>
                </value>
                <value>
                    <fullName>1: Gross Misconduct</fullName>
                </value>
                <value>
                    <fullName>2: Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3: Scope for improvement</fullName>
                </value>
                <value>
                    <fullName>4: Good</fullName>
                </value>
                <value>
                    <fullName>5: Outstanding</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Returner__c</fullName>
        <inlineHelpText>Survey question: Have you worked with us on previous programmes?

Returner?</inlineHelpText>
        <label>Returner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, same role</fullName>
                </value>
                <value>
                    <fullName>Yes, different role</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Returner_training_relevance__c</fullName>
        <inlineHelpText>Survey question: As a returner, please indicate the relevance of your training for your role 

Returner training relevance</inlineHelpText>
        <label>Returner training relevance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All of the information was very relevant</fullName>
                </value>
                <value>
                    <fullName>The training covered mostly new information</fullName>
                </value>
                <value>
                    <fullName>The training was relevant but covered a lot of the same information as previous years</fullName>
                </value>
                <value>
                    <fullName>The information was the same as previous years and therefore not relevant to me</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>TEXT( Job_Application__r.Role_to_assess_for__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roles_of_interest__c</fullName>
        <inlineHelpText>Survey Question: We are interested in continuing to work with our summer staff in various ways. Would you like to receive updates from The Challenge?</inlineHelpText>
        <label>Interested in updates?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAW_clarity__c</fullName>
        <inlineHelpText>Survey question: Please rate the clarity of the Staffing Website (5 = excellent, 1 = poor)

SAW clarity</inlineHelpText>
        <label>SAW clarity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - poor</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAW_ease_of_use__c</fullName>
        <inlineHelpText>Survey question: Please rate how easy the Staffing Website was to use and navigate (5 = extremely easy, 1 = very difficult)

SAW ease of use</inlineHelpText>
        <label>SAW ease of use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - very difficult</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - extremely easy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAW_other_best_feature__c</fullName>
        <inlineHelpText>Survey question: b) If &apos;other&apos; please state

SAW other best feature</inlineHelpText>
        <label>SAW other best feature</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAW_other_worst_feature__c</fullName>
        <inlineHelpText>Survey question: b) If &apos;other&apos; please state

SAW other worst feature</inlineHelpText>
        <label>SAW other worst feature</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_chatter_experience1__c</fullName>
        <inlineHelpText>Survey question: a) How was your experience of Salesforce Chatter for retrieving information on your young person?</inlineHelpText>
        <label>SF chatter experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I had no problems with Salesforce Chatter and received information on my young person easily</fullName>
                </value>
                <value>
                    <fullName>I initially had issues logging into Salesforce Chatter but once this was resolved I accessed the information easily</fullName>
                </value>
                <value>
                    <fullName>Salesforce Chatter was not compatible with my software and I struggled to access the information as a result</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLR_preferred_role_length__c</fullName>
        <inlineHelpText>Survey question: Next year we may offer your role in blocks of weeks (rather than the full 9 waves). What would be your preferred role length?</inlineHelpText>
        <label>SLR preferred role length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3 weeks</fullName>
                </value>
                <value>
                    <fullName>4 weeks</fullName>
                </value>
                <value>
                    <fullName>6 weeks</fullName>
                </value>
                <value>
                    <fullName>9 weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLR_preferred_total_of_weeks__c</fullName>
        <inlineHelpText>Survey question: How many waves or weeks would you have preferred to work?</inlineHelpText>
        <label>SLR preferred total of weeks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLR_total_number_of_weeks__c</fullName>
        <inlineHelpText>Survey question: How many waves or weeks overall did you work over the summer?</inlineHelpText>
        <label>SLR total number of weeks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Should_Not_Continue_Email_Sent__c</fullName>
        <label>&apos;Should Not Continue&apos; Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Skill_training_attended__c</fullName>
        <inlineHelpText>Survey question: Which skill training events did you attend? (Please choose all that apply)</inlineHelpText>
        <label>Skill training attended</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Photography</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills_training_relevance__c</fullName>
        <inlineHelpText>Survey question: Which part of the skills training day was most relevant to the role you performed?</inlineHelpText>
        <label>Skills training relevance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sponsorship_partner_suitability__c</fullName>
        <inlineHelpText>Survey question: Did you feel that the charity sponsorship partners you visited were engaged and well suited to the programme? (5 = definitely, 1 = not at all)</inlineHelpText>
        <label>Sponsorship partner suitability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staffing_Associate_Email__c</fullName>
        <label>Staffing Associate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submitted_by__c</fullName>
        <inlineHelpText>Name of APM or PM who submitted the feedback</inlineHelpText>
        <label>Submitted by</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_role_for_next_year__c</fullName>
        <description>Suggested role for next year</description>
        <label>What Role Next?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Assistant Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Senior Mentor</fullName>
                </value>
                <value>
                    <fullName>Community Facilitator</fullName>
                </value>
                <value>
                    <fullName>Support Worker</fullName>
                </value>
                <value>
                    <fullName>Logistics Officer</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
                <value>
                    <fullName>Residential Mentor</fullName>
                </value>
                <value>
                    <fullName>Associate Mentor</fullName>
                </value>
                <value>
                    <fullName>Senior Associate Mentor</fullName>
                </value>
                <value>
                    <fullName>Senior Community Facilitator</fullName>
                </value>
                <value>
                    <fullName>Personal Coach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_of_experience__c</fullName>
        <inlineHelpText>Survey Question: Can you summarise in a sentence your experience as a Challenge summer staff member this year? (cuts off after 5000 characters)</inlineHelpText>
        <label>Summary of experience</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Teacher_at_partner_school__c</fullName>
        <inlineHelpText>Survey question: a) Are you a teacher?

Teacher at partner school?</inlineHelpText>
        <label>Teacher at partner school?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teamwork_With_other_Staff__c</fullName>
        <label>Teamwork (With other Staff)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Worked very well with all team members</fullName>
                </value>
                <value>
                    <fullName>Worked well with all team members</fullName>
                </value>
                <value>
                    <fullName>Average team work but delivered on role</fullName>
                </value>
                <value>
                    <fullName>Not a team player, clashed with others</fullName>
                </value>
                <value>
                    <fullName>1: Gross Misconduct</fullName>
                </value>
                <value>
                    <fullName>2: Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3: Scope for improvement</fullName>
                </value>
                <value>
                    <fullName>4: Good</fullName>
                </value>
                <value>
                    <fullName>5: Outstanding</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uni_marketing_rep_interest__c</fullName>
        <inlineHelpText>Survey question: c) Would you like to be a Uni Marketing Rep?

Uni marketing rep interest</inlineHelpText>
        <label>Uni marketing rep interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usual_communication_method__c</fullName>
        <inlineHelpText>Survey question: How often did you communicate with your Staffing Associate?

Usual communication method</inlineHelpText>
        <label>Usual communication method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By phone call</fullName>
                </value>
                <value>
                    <fullName>By text message</fullName>
                </value>
                <value>
                    <fullName>By direct email (non-automatic)</fullName>
                </value>
                <value>
                    <fullName>Automated Emails</fullName>
                </value>
                <value>
                    <fullName>Consulting the Staffing Website</fullName>
                </value>
                <value>
                    <fullName>Tick all that apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verbal_communication_clarity__c</fullName>
        <inlineHelpText>Survey question: How would you rate the quality of verbal communications from NCS with The Challenge? (5 = execellent, 1 = poor)

Rating: Verbal communication clarity</inlineHelpText>
        <label>Rating: Verbal communication clarity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - poor</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <formula>Job_placement__r.Job__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ways_YP_can_understand_RCA__c</fullName>
        <inlineHelpText>Survey question: What do you feel would be the most effective way to help young people fully understand what they are doing for the different RCA weekends?</inlineHelpText>
        <label>Ways YP can understand RCA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change in curriculum structure to reflect each weekend</fullName>
                </value>
                <value>
                    <fullName>Time dedicated for Community Facilitators to talk to team about each weekend</fullName>
                </value>
                <value>
                    <fullName>Hard copy detailing each weekend to give out to teams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_TCN_should_do_differently__c</fullName>
        <inlineHelpText>Survey Question: What should The Challenge do differently in 2013 to improve the experience of summer staff?</inlineHelpText>
        <label>What TCN should do differently</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_was_your_role__c</fullName>
        <inlineHelpText>Survey question: What was your role over the summer (Please select all that apply)

What was your role?</inlineHelpText>
        <label>What was your role?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assistant Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Community Facilitator</fullName>
                </value>
                <value>
                    <fullName>Drama Practitioner</fullName>
                </value>
                <value>
                    <fullName>Enterprise Practitioner</fullName>
                </value>
                <value>
                    <fullName>Logs Officer</fullName>
                </value>
                <value>
                    <fullName>Media Practitioner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Photography Practitioner</fullName>
                </value>
                <value>
                    <fullName>Practitioner Plus</fullName>
                </value>
                <value>
                    <fullName>Programme Leader</fullName>
                </value>
                <value>
                    <fullName>RAM</fullName>
                </value>
                <value>
                    <fullName>Residential Mentor</fullName>
                </value>
                <value>
                    <fullName>Senior Mentor</fullName>
                </value>
                <value>
                    <fullName>Sports Practitioner</fullName>
                </value>
                <value>
                    <fullName>Support Worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Worst_feature_of_SAW__c</fullName>
        <inlineHelpText>Survey question: a) What is the worst feature of the website?

Worst feature of SAW</inlineHelpText>
        <label>Worst feature of SAW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Difficulty logging in</fullName>
                </value>
                <value>
                    <fullName>&apos;Missing information&apos; notifications are not clear enough</fullName>
                </value>
                <value>
                    <fullName>It is not possible to &apos;skip&apos; to a specific section or page</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1_2_1_support_needed__c</fullName>
        <inlineHelpText>Survey question: Do you feel that your young person(s) needed 1-2-1 support throughout the programme?</inlineHelpText>
        <label>1-2-1 support needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, they required support over the 3 weeks and NCS: RCA</fullName>
                </value>
                <value>
                    <fullName>Yes, although they seemed to have less need for me ass the programme went on</fullName>
                </value>
                <value>
                    <fullName>No, I&apos;, not sure their support level required 1-2-1 support</fullName>
                </value>
                <value>
                    <fullName>No, they did not really need my help at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_day_training_usefulness__c</fullName>
        <label>2-day training usefulness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3_factors_work_again_with_The_Challenge__c</fullName>
        <inlineHelpText>Survey Question: What three factors would most encourage you to return to work with The Challenge in 2013? (cuts off at 1000 characters)</inlineHelpText>
        <label>3 factors: work again with The Challenge</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YP_information_accurate__c</fullName>
        <inlineHelpText>Survey question: Was the information you received about your young person accurate and relevant? (5 = definitely, 1 = not at all)</inlineHelpText>
        <label>YP information accurate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>AM_feedback</fullName>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Application__c</field>
            <operation>contains</operation>
            <value>2015</value>
        </filters>
        <label>AM feedback</label>
    </listViews>
    <listViews>
        <fullName>AM_feedback_2013_5star_Ben</fullName>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>Contact_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Feedback__c.APM_Feedback_associate_mentor</value>
        </filters>
        <filters>
            <field>Feedback_rating__c</field>
            <operation>equals</operation>
            <value>5 - Excellent,4 - Good</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>CaW</value>
        </filters>
        <label>AM feedback 2013 5star Ben</label>
    </listViews>
    <listViews>
        <fullName>All_2013_Feedback1</fullName>
        <columns>Contact_Name__c</columns>
        <columns>Interest_in_Alumni__c</columns>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>Wave__c</columns>
        <columns>Feedback_rating__c</columns>
        <columns>Feedback_details__c</columns>
        <columns>Role__c</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/5/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>Rate_APM_Support__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>startsWith</operation>
            <value>practitioner,residential,logistics</value>
        </filters>
        <label>Sharmin</label>
    </listViews>
    <listViews>
        <fullName>All_2013_Feedback2</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Job_Application__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Cluster__c</columns>
        <columns>Date_feedback_submitted__c</columns>
        <columns>Feedback_details__c</columns>
        <columns>Feedback_rating__c</columns>
        <columns>Feedback_summary__c</columns>
        <columns>Role__c</columns>
        <columns>Suggested_role_for_next_year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Application__c</field>
            <operation>contains</operation>
            <value>2013</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>notEqual</operation>
            <value>Associate Mentor,Senior Associate Mentor</value>
        </filters>
        <filters>
            <field>Feedback_rating__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All - 2013 Feedback</label>
    </listViews>
    <listViews>
        <fullName>All_2013_Feedback3</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Job_Application__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Cluster__c</columns>
        <columns>Date_feedback_submitted__c</columns>
        <columns>Feedback_details__c</columns>
        <columns>Feedback_rating__c</columns>
        <columns>Feedback_summary__c</columns>
        <columns>Role__c</columns>
        <columns>Suggested_role_for_next_year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Application__c</field>
            <operation>contains</operation>
            <value>2013</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>notEqual</operation>
            <value>Associate Mentor</value>
        </filters>
        <filters>
            <field>Feedback_rating__c</field>
            <operation>contains</operation>
            <value>1 - Unacceptable</value>
        </filters>
        <label>All - 2013 Feedback</label>
    </listViews>
</CustomObject>